@@ -1,3 +1,10 @@
+2006-03-20  Per Bothner  <per@bothner.com>
+
+	* PrimProcedure.java (matchN): Don't add extraCount to fixArgs.
+
+	* PrimProcedure.java (matchN): Simplify check for correct number
+	of args, getting rid of mlen variable and code redundancy.
+
 2006-03-17  Per Bothner  <per@bothner.com>
 
 	* Declaration.java: Add hooks for type expression that are evaluted
